scss/styles.scss
// IMPORTS

@import 'popup';


// VARIABLES

// breakpoints for media queries
$tablet    : 600px;
$desktop   : 800px;

//colors for gradient
$color1    : #f2e0bd;
$color2    : #85b4fc;
$color3    : #6fc2b9;
$color4    : #9fe8f2;


// STYLIN

html {
  background: linear-gradient(302deg, $color1, $color2, $color3, $color4, $color1);
  background-size: 1000%;
  animation: gradient 25s infinite ease-in-out alternate;
  @keyframes gradient {
    0% { background-position: left; }
    100% { background-position: right; }
  }
  body {
    padding: 0px;
    margin: 0px;
    .bg {
      background: url('../assets/img/bg.jpg');
      height: 130%;
      width: 100%;
      opacity: .1;
      z-index: -999;
      position: absolute;
      background-size: cover;
      background-position: right;
      @media (min-width: $tablet) {
        height: 100vh;
        width: 100vw;
        overflow: hidden;
      }
    }
    .container {
      padding: 20px;
      @media (min-width: $desktop) {
        width: $desktop;
        margin: auto;
      }
    }
  }
}

h1 {
  font-weight: 400;
}

.lower {
  margin-top: 60px;
  ul {
    list-style: none;
    margin: 0px;
    padding: 0px;
    height: 100%;
    column-count: 1;
    @media (min-width: $tablet) {
      column-count: 2;
    }
    @media (min-width: $desktop) {
      column-count: 3;
    }
    li {
      word-wrap: break-word;
      margin: 4px 0;
    }
  }
}

a {
  color: blue;
  text-decoration: underline;
  cursor: pointer;
  &:hover {
    text-decoration: none;
  }
  &#closeAll {
    position: absolute;
    right: 100px;
    bottom: 100px;
    display: none;
  }
}

